# RayCasting

./: .gitignore  CMakeLists.txt  README.md  clean.bat  imgui.ini  manual.txt
headers/: Light.h  Obstacle.h  Window.h
src/: Light.cpp  Window.cpp  main.cpp
